Test with reflectors

--- a/index.html
+++ b/index.html
@@ -583,7 +583,7 @@ App.makeWidgetDock(); // shows QR code
 
 StartWorldcore({
     appId: 'io.croquet.physics',
-    apiKey: '2d0fPrsWoWQFrelRWB1TftMoNJLfOk4Ni6XkQvswX3', //'1Mnk3Gf93ls03eu0Barbdzzd3xl1Ibxs7khs8Hon9',
+    apiKey: '1Mnk3Gf93ls03eu0Barbdzzd3xl1Ibxs7khs8Hon9',//'2d0fPrsWoWQFrelRWB1TftMoNJLfOk4Ni6XkQvswX3', //
     model: MyModelRoot,
     view: MyViewRoot,
 }); 
