--- a/index.html
+++ b/index.html
@@ -586,6 +586,7 @@ StartWorldcore({
     apiKey: '2d0fPrsWoWQFrelRWB1TftMoNJLfOk4Ni6XkQvswX3', //'1Mnk3Gf93ls03eu0Barbdzzd3xl1Ibxs7khs8Hon9',
     model: MyModelRoot,
     view: MyViewRoot,
+    tps: 30,
 }); 
         </script>
     </head>
