Testing to find cause of slow down 1

--- a/index.html
+++ b/index.html
@@ -579,7 +579,7 @@ export class MyViewRoot extends ViewRoot {
         }
     }
 }
-App.makeWidgetDock(); // shows QR code
+//App.makeWidgetDock(); // shows QR code
 
 StartWorldcore({
     appId: 'io.croquet.physics',
