Put it all back together.

--- a/index.html
+++ b/index.html
@@ -579,7 +579,7 @@ export class MyViewRoot extends ViewRoot {
         }
     }
 }
-//App.makeWidgetDock(); // shows QR code
+App.makeWidgetDock(); // shows QR code
 
 StartWorldcore({
     appId: 'io.croquet.physics',
@@ -592,6 +592,7 @@ StartWorldcore({
         </script>
     </head>
     <body>
-        
+        <a id="codelink" href="https://github.com/multisynq/physics-fountain/blob/main/index.html"
+        title="View source code on GitHub" target="_blank">{...}</a>
     </body>
 </html> 
