--- a/index.html
+++ b/index.html
@@ -33,11 +33,12 @@ import { StartWorldcore, App, UserManager, User, ModelRoot, Actor, mix, AM_Spati
     v3_scale, v3_add, v3_sub, v3_normalize, v3_magnitude, v3_transform, 
     q_axisAngle, q_multiply, m4_getTranslation, m4_rotation, m4_multiply, m4_translation, TAU, toRad
 } from "@croquet/worldcore";
-import { RAPIER, RapierManager, AM_RapierWorld, AM_RapierRigidBody} from "@croquet/worldcore-rapier";
+import { RAPIER, RapierManager, AM_RapierWorld, AM_RapierRigidBody, RapierVersion } from "@croquet/worldcore-rapier";
 
 function rgb(r, g, b) {
     return [r/255, g/255, b/255];
 }
+
 //------------------------------------------------------------------------------------------
 //-- MyActor ----------------------------------------------------------------------------
 //------------------------------------------------------------------------------------------
@@ -99,49 +100,6 @@ class SprayActor extends mix(Actor).with(AM_Spatial, AM_RapierRigidBody) {
 
 }
 SprayActor.register('SprayActor');
-
-//------------------------------------------------------------------------------------------
-//-- BlockActor ----------------------------------------------------------------------------
-//------------------------------------------------------------------------------------------
-class BlockActor extends mix(Actor).with(AM_Spatial, AM_RapierRigidBody) {
-
-    get pawn() {return "SprayPawn"}
-
-    get shape() {return this._shape || "cube"}
-    get index() { return this._index || 0 }
-
-    init(options) {
-        super.init(options);
-
-        this.buildCollider();
-    }
-
-    buildCollider() {
-        let cd;
-        switch (this.shape) {
-            case "cone":
-                cd = RAPIER.ColliderDesc.cone(0.5, 0.5);
-                cd.setDensity(4);
-                break;
-            case "ball":
-                cd = RAPIER.ColliderDesc.ball(0.5);
-                cd.setDensity(2);
-                break;
-            case "cylinder":
-                cd = RAPIER.ColliderDesc.cylinder(0.5, 0.5);
-                cd.setDensity(1.5);
-                break;
-            case "cube":
-            default:
-                cd = RAPIER.ColliderDesc.cuboid(0.5, 0.5, 0.5);
-                cd.setDensity(1);
-            break;
-        }
-
-        this.createCollider(cd);
-    }
-}
-BlockActor.register('BlockActor');
 
 //------------------------------------------------------------------------------------------
 //-- FountainActor ------------------------------------------------------------------------
@@ -265,8 +223,6 @@ export class MyModelRoot extends ModelRoot {
         this.seedColors();
 
         this.fountain = FountainActor.create({gravity: [0,-9.8,0], timestep:50, translation: [0,0,0], max: 200, rigidBodyType: "static"});
-
-        this.block = BlockActor.create({parent: this.fountain, translation: [0,1,5], rigidBodyType: "kinematic", index: 2});
     }
 
     seedColors() {
@@ -459,7 +415,6 @@ export class FountainPawn extends mix(Pawn).with(PM_Spatial, PM_ThreeVisible) {
         group.add(base);
         group.add(nozzle);
 
-
         this.setRenderObject(group);
     }
 }
@@ -474,7 +429,7 @@ export class MyViewRoot extends ViewRoot {
         return [InputManager, ThreeRenderManager, ThreeInstanceManager];
     }
 
-    // no need for a constructor... constructor(model) { super(model); }
+    // no need for a constructor, use default... constructor(model) { super(model); }
 
     onStart() {
         this.buildLights();
@@ -483,7 +438,6 @@ export class MyViewRoot extends ViewRoot {
 
     buildLights() {
         const rm = this.service("ThreeRenderManager");
-
         rm.renderer.setClearColor(new THREE.Color(0.45, 0.8, 0.8));
 
         const group = new THREE.Group();
@@ -579,6 +533,7 @@ export class MyViewRoot extends ViewRoot {
         }
     }
 }
+
 App.makeWidgetDock(); // shows QR code
 
 StartWorldcore({
